gcc/testsuite/rust/rustc/ui/no-link-unknown-crate.rs
#[no_link]
extern crate doesnt_exist; // { dg-error ".E0463." "" { target *-*-* } }

fn main() {}

